--- a/smurfs/package.json
+++ b/smurfs/package.json
@@ -10,7 +10,8 @@
     "react-scripts": "3.0.1",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
-    "styled-components": "^4.4.1"
+    "styled-components": "^4.4.1",
+    "uuid": "^3.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
